// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Project status closed renders correctly 1`] = `
<jest>
  <h3
    class="fw-bold mb-4"
    id="project-details"
  >
    Project details
  </h3>
  <div
    class="border-bottom pb-4 mb-4"
  >
    <div
      class="row"
    >
      <div
        class="col-12 col-md-3"
      >
        <p
          class="fw-bold"
        >
          Status
        </p>
        <span
          class="mb-3 mb-md-0 badge bg-dark"
        >
          Closed
        </span>
      </div>
      <div
        class="col-12 col-md-9"
      >
        <div
          class="d-flex justify-content-between"
        >
          <p
            class="fw-bold"
          >
            Start
            <br />
            <span
              class="fw-normal"
            >
              19/12/2020
            </span>
          </p>
          <p
            class="fw-bold text-end"
          >
            End
            <br />
            <span
              class="fw-normal"
            >
              19/12/2027
            </span>
          </p>
        </div>
        <div
          class="progress"
        >
          <div
            aria-label="100"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="100"
            class="progress-bar bg-dark"
            role="progressbar"
            style="width: 100%"
          />
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Project status ongoing renders correctly 1`] = `
<jest>
  <h3
    class="fw-bold mb-4"
    id="project-details"
  >
    Project details
  </h3>
  <div
    class="border-bottom pb-4 mb-4"
  >
    <div
      class="row"
    >
      <div
        class="col-12 col-md-3"
      >
        <p
          class="fw-bold"
        >
          Status
        </p>
        <span
          class="mb-3 mb-md-0 badge bg-info"
        >
          Ongoing
        </span>
      </div>
      <div
        class="col-12 col-md-9"
      >
        <div
          class="d-flex justify-content-between"
        >
          <p
            class="fw-bold"
          >
            Start
            <br />
            <span
              class="fw-normal"
            >
              19/12/2020
            </span>
          </p>
          <p
            class="fw-bold text-end"
          >
            End
            <br />
            <span
              class="fw-normal"
            >
              19/12/2027
            </span>
          </p>
        </div>
        <div
          class="progress"
        >
          <div
            aria-label="25"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="25"
            class="progress-bar bg-info"
            role="progressbar"
            style="width: 25%"
          />
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Project status planned renders correctly 1`] = `
<jest>
  <h3
    class="fw-bold mb-4"
    id="project-details"
  >
    Project details
  </h3>
  <div
    class="border-bottom pb-4 mb-4"
  >
    <div
      class="row"
    >
      <div
        class="col-12 col-md-3"
      >
        <p
          class="fw-bold"
        >
          Status
        </p>
        <span
          class="mb-3 mb-md-0 badge bg-secondary"
        >
          Not started
        </span>
      </div>
      <div
        class="col-12 col-md-9"
      >
        <div
          class="d-flex justify-content-between"
        >
          <p
            class="fw-bold"
          >
            Start
            <br />
            <span
              class="fw-normal"
            >
              19/12/2020
            </span>
          </p>
          <p
            class="fw-bold text-end"
          >
            End
            <br />
            <span
              class="fw-normal"
            >
              19/12/2027
            </span>
          </p>
        </div>
        <div
          class="progress"
        >
          <div
            aria-label="0"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="0"
            class="progress-bar bg-secondary"
            role="progressbar"
            style="width: 0%"
          />
        </div>
      </div>
    </div>
  </div>
</jest>
`;
